--- a/code/css/index.css
+++ b/code/css/index.css
@@ -4,16 +4,19 @@
 }
 .logo {
   width: 23%;
+  height: 200px;
   padding: 1%;
-  text-align: center;  
+  text-align: center;
+  object-fit: contain; 
 }
 nav {
-    width: 73;
+    width: 73%;
     padding: 1%;
 }
 ul {
     width: 50%;
     margin: auto left;
+    padding: 8px;
 }
 .heroImg{
     height: 600px;
@@ -23,4 +26,16 @@ ul {
     width: 500px;
     margin: 0 auto;
 }
-
+footer {
+    background-color: #373738;
+}
+footer ul {
+    display: inline-block;
+    vertical-align: top;
+    padding: 1%;
+}
+.projectCard {
+    background-image: url(/code/images/Mobile\ App\ Design\ Case\ Study\ \(Group\).png) ;
+    height: 1017px;
+    width: 1440px;
+}
