--- a/code/css/index.css
+++ b/code/css/index.css
@@ -10,15 +10,18 @@
 }
 #navLogo {
     width: 100%;
-    margin-right: auto;
+    margin: auto;
 }
 .navigation  {
     width: 100%;
     padding: 1%;
+    margin-left: auto;
+    display: flex;
+    justify-content: space-between;
 }
 ul {
     padding: 8px;
-    margin-left: auto;
+    
 }
 .heroImg{
     height: 600px;
