--- a/code/css/index.css
+++ b/code/css/index.css
@@ -1,10 +1,12 @@
+body {
+    background-color: #FDF0D5 ;
+}
 .inline-block {
     display: inline-block;
     vertical-align: top;
 }
 .logo {
   width: 23%;
-  height: 200px;
   padding: 1%;
   text-align: center;
 }
@@ -15,13 +17,16 @@
 .navigation  {
     width: 100%;
     padding: 1%;
-    margin-left: auto;
     display: flex;
     justify-content: space-between;
+    background-color: #fff;
+    height: auto;
 }
 ul {
+    padding: 8px;  
+}
+li {
     padding: 8px;
-    
 }
 .heroImg{
     height: 600px;
@@ -39,8 +44,28 @@ footer ul {
     vertical-align: top;
     padding: 1%;
 }
-.projectCard {
-    background-image: url(/code/images/Mobile\ App\ Design\ Case\ Study\ \(Group\).png) ;
-    height: 1017px;
-    width: 1440px;
+.projectCards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 600px 1fr 1fr;
+    grid-template-areas: 
+    "01 02"
+    "03 04";
+    
+}
+#p01 {
+    background-image: url(/code/images/Mobile\ App\ Design\ Case\ Study\ \(Group\).png);
+}
+#p02 {
+    background-image: url(/code/images/Government\ RWD\ Redesign.png);
+}
+#p03 {
+    background-image: url(/code/images/NPO\ Redesign\ Thumbnail\ \(Lower\ Res\).png);
+}
+#p04 {
+    background-image: url(/code/images/Mobile\ App\ Design\ Case\ Study\ \(Solo\).png);
+}
+p {
+    padding: 3%;
+    font-family: 'Open Sans', sans-serif;
 }
