--- a/code/css/index.css
+++ b/code/css/index.css
@@ -38,7 +38,7 @@ li {
     margin: 0 auto;
 }
 footer {
-    background-color: #373738;
+    background-color: #fff;
 }
 footer ul {
     display: inline-block;
